--- a/.github/workflows/mnist.yml
+++ b/.github/workflows/mnist.yml
@@ -61,7 +61,7 @@ jobs:
         # and rely on dependabot for digest/version updates
         uses: project-copacetic/copa-action@main
         with:
-          image: ${{ matrix.images }}
+          image: ghcr.io/bahe-msft/gpu-image/mnist:gpu
           image-report: "report.json"
           patched-tag: "patched"
           timeout: "5m" # optional, default is 5m
