--- a/.github/workflows/mnist.yml
+++ b/.github/workflows/mnist.yml
@@ -47,12 +47,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./mnist
-          push: true
-          tags: ghcr.io/bahe-msft/gpu-image/mnist:gpu
+      # - name: Build and push Docker image
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: ./mnist
+      #     push: true
+      #     tags: ghcr.io/bahe-msft/gpu-image/mnist:gpu
 
       - name: Generate Trivy Report
         uses: aquasecurity/trivy-action@0.20.0
@@ -85,4 +85,5 @@ jobs:
       - name: Push patched image
         if: steps.login.conclusion == 'success'
         run: |
+          docker images
           docker push ${{ steps.copa.outputs.patched-image }}
