--- a/.github/workflows/mnist.yml
+++ b/.github/workflows/mnist.yml
@@ -28,6 +28,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Generate date based tag
+        id: tag
+        run: echo "::set-output name=tag::$(date +'%Y%m%d%H%M')"
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
@@ -43,7 +47,7 @@ jobs:
           output: "report.json"
           ignore-unfixed: true
           vuln-type: "os"
-          image-ref: ghcr.io/bahe-msft/gpu-image/mnist:gpu
+          image-ref: ghcr.io/bahe-msft/gpu-image/mnist-gpu:${{ steps.tag.outputs.tag }}
 
       - name: Run Copa action
         id: copa
@@ -51,7 +55,7 @@ jobs:
         with:
           image: ghcr.io/bahe-msft/gpu-image/mnist:gpu
           image-report: "report.json"
-          patched-tag: "gpu-patched"
+          patched-tag: "${{ steps.tag.outputs.tag }}-patched"
           timeout: "5m" # optional, default is 5m
           output: vex.json # optional
           format: "openvex" # optional, default is openvex
