--- a/.github/workflows/mnist.yml
+++ b/.github/workflows/mnist.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           context: ./mnist
           push: true
-          tags: ghcr.io/bahe-msft/gpu-image/mnist:gpu
+          tags: ghcr.io/bahe-msft/gpu-image/mnist-gpu:${{ steps.tag.outputs.tag }}
 
       - name: Generate Trivy Report
         uses: aquasecurity/trivy-action@0.20.0
@@ -53,7 +53,7 @@ jobs:
         id: copa
         uses: project-copacetic/copa-action@main
         with:
-          image: ghcr.io/bahe-msft/gpu-image/mnist:${{ steps.tag.outputs.tag }}
+          image: ghcr.io/bahe-msft/gpu-image/mnist-gpu:${{ steps.tag.outputs.tag }}
           image-report: "report.json"
           patched-tag: "${{ steps.tag.outputs.tag }}-patched"
           timeout: "5m" # optional, default is 5m
